# DEF

./: README.md  build.js  building.js  dump.js  dumping.js  index.js  package.json  parse.js  parsing.js  run_test.bat  same.js  sample.js  test.js  test.txt
CODE/DART/: CHANGELOG.md  README.md  pubspec.yaml  run_sample.bat
CODE/DART/FILE/: CHANGELOG.md  README.md  pubspec.yaml
CODE/DART/TEXT/: pubspec.yaml
CODE/DART/lib/: building.dart  parsing.dart  processing.dart  senselogic_def.dart
CODE/DART/test/: test.dart
CODE/DATA/: test.txt
CODE/DATA/articles/: article_002.def  article_200.def
CODE/FILE/DART/: CHANGELOG.md  pubspec.yaml
CODE/FILE/DATA/: test.txt
CODE/FILE/JAVASCRIPT/: README.md  file.js  index.js  package.json  reading.js  test.js
CODE/JAVASCRIPT/: README.md  building.js  dumping.js  index.js  package-lock.json  package.json  parsing.js  processing.js  test.js  test.txt
CODE/JAVASCRIPT/included/: included_value_2.def
CODE/PYTHON/TEXT/: .gitignore  README.md  __init__.py  building.py  clean.bat  constant.py  dumping.py  equivalence.py  index.py  install.bat  map.py  parsing.py  processing.py  publish.bat  pyproject.toml  reading.py  run_sample.bat  run_test.bat  sample.py  test.py
CODE/TEXT/DART/: CHANGELOG.md  README.md  pubspec.yaml
CODE/TEXT/DATA/: imported.def  imported_1.def  imported_2.def
CODE/TEXT/JAVASCRIPT/: README.md  fetching.js  index.js  package.json  parsing.js  processing.js  reading.js  test.js
CODE/TOOL/: map_sorter.html
DATA/FILE/articles/: article_10.def
DATA/TEXT/: test.def  test.txt
(+35 files in other folders)
