[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "senselogic-def"
version = "0.1.0"
description = "Python port of the Senselogic DEF (Data Exchange Format) library."
readme = "README.md"
requires-python = ">=3.9"
license = "LGPL-3.0-or-later"
authors = [{ name = "Eric Pelzer", email = "ecstatic.coder@gmail.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    ]

[project.urls]
Homepage = "https://github.com/senselogic/DEF"

[tool.setuptools]
package-dir = { "text" = "." }
packages = ["text"]
